# Projekt_Breakout

./: CMakeLists.txt  README.md
src/: main.c
src/game/: game.c  game.h
src/game/environment/: map.c  map.h  world.c  world.h
src/game/menus/: main_menu.c  main_menu.h
src/game/player/: ball.c  ball.h  paddle.c  paddle.h
src/helper/: SDL.c  SDL.h  global.c  global.h
src/resources/: resource_manager.c  resource_manager.h
